# Agentic-Project-Manager

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.claude/skills/tailor/: SKILL.md
agents/: README.md  pm.md
config/: apm.yaml
docs/: PM_DATASTORE.md  setup.md
hooks/: guard_sql.sh  hooks.json
mcp/: pm.mcp.json
schemas/: consultation.json
skills/bootstrap/: SKILL.md
skills/pm-run/: SKILL.md
skills/tailor/: SKILL.md
src/apm/: __init__.py  bootstrap.py  cli.py  config.py  consult.py  gh.py  hashing.py  pm_run.py  runner.py
src/apm/ledger/: __init__.py  jsonfile.py  supabase.py
supabase/migrations/: 20260716000000_pm_ledger.sql
tests/: test_config.py  test_hashing.py  test_jsonfile_ledger.py
workflows/: pm.yml
