[project]
name = "agentic-pm"
version = "0.1.0"
description = "Configurable agentic project-manager pipeline: a PM agent plus spec-tailored advisory role agents, driven by Claude Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# `uv sync --extra sdk` to drive runs through the Claude Agent SDK instead of
# wrapping the claude CLI (runner.engine: sdk in config/apm.yaml)
sdk = ["claude-agent-sdk>=0.1.0"]

[project.scripts]
apm = "apm.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
